--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,8 @@
     "mobx-react-lite": "^3.4.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0"
   },
   "browserslist": [
     "> 1%",
