--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "mobx": "^6.6.1",
     "mobx-react-lite": "^3.4.0",
     "normalize.css": "^8.0.1",
